feat: allow override constraints